--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ festas, aeroportos, portos, pontos turísticos, particular.</p>
 <svg id="bigHalfCircle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
 				<path d="M0 100 C40 0 60 0 100 100 Z"></path>
 			</svg>
-<section class="color4">
+<section id="carro" class="color4">
 				<div class="column">
 <center><svg width="450" height="300" viewBox="0 0 450 300">
     <filter>
