--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@ li a {
 li a:hover {
   background-color: #111;
 }
+header {
+	font-family: 'Great Vibes', cursive;
+	font: 'Great Vibes', cursive;
+		}
+.h1 {
+	font-family: 'Great Vibes', cursive;
+	font: 'Great Vibes', cursive;
+		}
 	</style>
 	<body>
 	<nav>
