--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-sheader=1.0"> 
 		<title>CRM</title>
-		<meta name="description" content="Some inspiration for web divider styles" />
-		<meta name="keywords" content="separator css, divider css, separator style, web design, flat design, inspiration, responsive, svg, pseudo-elements" />
+		<meta name="description" content="Inovação em Transporte Executivo, com segurança, pontualidade, seriedade, conforto, respeito, honestidade, comprometimento com nossos clientes, esta é a nossa satisfação." />
+		<meta name="keywords" content="Taxi Execuivo, Transporte Executivo, Executivo, Executive, Aeroporto, Guarulhos, Viracopos, Claudia Regina Maximiano, Alexandre Maximiano de Freitas, DarthDesign, Darthdesign, darthdesign, Darth Design" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
