--- a/index.html
+++ b/index.html
@@ -54,16 +54,23 @@ header {
 		}
 	</style>
 	<body>
-	<nav>
+	<center><nav>
 	<ul>
-	<li><a href="#empresa">Empresa</a></li>
-	<li><a href="#missao">Missão</a></li>
-	<li><a href="#servico">Serviço</a></li>
-	<li><a href="#carro">Carro</a></li>
-	<li><a href="#contato">Contato</a></li>
+		<li><a href="#contato">Contato</a></li>
+		<li><a href="#carro">Carro</a></li>
+		<li><a href="#servico">Serviço</a></li>
+		<li><a href="#missao">Missão</a></li>
+		<li><a href="#empresa">Empresa</a></li>
+	
+	
+	
+	
+
 	</ul>
-	</nav>
+	</nav></center>
 	<br>
+	<br>
+    <br>
 	<br>
 		<div class="container">
 			<!-- Top Navigation -->
@@ -212,13 +219,19 @@ festas, aeroportos, portos, pontos turísticos, particular.</p>
 </svg></center>
 					<p><h1>Equipado com: </h1>
 <br>
-<h1>GPS</h1><br><h1>Freios ABS</h1><br><h1>Airbags</h1><br><h1>Revisões preventivas sempre atualizadas.</h1> 
+-GPS
 <br>
-<h1>Película de proteção solar e Ar condicionado.</h1>
+-Freios ABS
+<br>
+-Airbags
+<br>
+-Revisões preventivas sempre atualizadas.
+<br>
+-Película de proteção solar e Ar condicionado.
 <br>
 <h2>INFORMAÇÕES ADICIONAIS:</h2>
 <br>
-<h1>Água mineral, barras de cereais, balas e jornal atualizado grátis no interior do veiculo.</h1></p>
+-Água mineral, barras de cereais, balas e jornal atualizado grátis no interior do veiculo.</p>
 				</div>
 			</section>			
 </body>
