--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ ul {
 }
 
 li {
-  float: right;
+  float: left;
 }
 
 li a {
@@ -74,39 +74,18 @@ header {
 	<br>
 		<div class="container">
 			<!-- Top Navigation -->
-			<header class=header">
+			<header class="header">
 				<h1 class="texto" >C R M<span>Transporte Executivo</span></h1>	
 			</header>
-			<svg id="clouds" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
-				<path d="M-5 100 Q 0 20 5 100 Z
-						 M0 100 Q 5 0 10 100
-						 M5 100 Q 10 30 15 100
-						 M10 100 Q 15 10 20 100
-						 M15 100 Q 20 30 25 100
-						 M20 100 Q 25 -10 30 100
-						 M25 100 Q 30 10 35 100
-						 M30 100 Q 35 30 40 100
-						 M35 100 Q 40 10 45 100
-						 M40 100 Q 45 50 50 100
-						 M45 100 Q 50 20 55 100
-						 M50 100 Q 55 40 60 100
-						 M55 100 Q 60 60 65 100
-						 M60 100 Q 65 50 70 100
-						 M65 100 Q 70 20 75 100
-						 M70 100 Q 75 45 80 100
-						 M75 100 Q 80 30 85 100
-						 M80 100 Q 85 20 90 100
-						 M85 100 Q 90 50 95 100
-						 M90 100 Q 95 25 100 100
-						 M95 100 Q 100 15 105 100 Z">
-				</path>
+			<svg id="curveUpColor2" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
+				<path d="M0 100 C 20 0 50 0 100 100 Z"></path>
 			</svg>
 			<section id="empresa" class="col-2">
 				<div class="column text">
-					<h2>Empresa</h2>
+					<fieldset><legend><h2>Empresa</h2></legend>
 					<p>C. R. M Fundada em Junho 2015 traz para nossos clientes uma inovação em Transporte Executivo, com segurança, pontualidade, seriedade, conforto, respeito, honestidade, comprometimento com nossos clientes, esta é a nossa satisfação. 
 Motorista Credenciada para operações em transporte executivo.</p>
-				</div>
+				</fieldset></div>
 				<div class="column">
 				<svg width="450" height="300" viewBox="0 0 450 300">
     <filter id="erode">
@@ -133,12 +112,13 @@ Motorista Credenciada para operações em transporte executivo.</p>
 				</div>
 
 				<div class="column text">
-				<h2>Missão </h2>
-				<p>Fidelizar clientes e buscar a satisfação, com o desejo de ser tratado com dignidade e respeito. 
+				<fieldset><legend><h2>Missão </h2></legend>
+				
+				<p><div style="color: #fff;">Fidelizar clientes e buscar a satisfação, com o desejo de ser tratado com dignidade e respeito. 
 Oferecendo o melhor transporte executivo. Objetivo 
 Atende-los da melhor forma possível com profissionalismo. 
 Honestidade, responsabilidade, seriedade, pontualidade e segurança.</p>
-				</div>
+				</fieldset></div>
 			</section>
 <svg id="stamp" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
 				<path d="M0 0 Q 2.5 40 5 0 
@@ -168,12 +148,9 @@ Honestidade, responsabilidade, seriedade, pontualidade e segurança.</p>
 			</svg>
 			<section id="servico" class="color3">
 			<div class="column">
-				<h2>Serviços </h2>
+				<fieldset><legend><h2>Serviços </h2></legend>
 				<center><svg width="450" height="300" viewBox="0 0 450 300">
-    <filter id="erode">
-        <feMorphology operator="erode" radius="2"></feMorphology>
-    </filter>
-    <image xlink:href="img/SERVICE.png" width="90%" height="90%" x="1" y="1" filter="url(#erode)"></image>
+    <image xlink:href="img/SERVICE.png" width="90%" height="90%" x="1" y="1" ></image>
 </svg></center>
 				<p>Transporte para empresas, dia da noiva, casamento, aniversário, 
 festas, aeroportos, portos, pontos turísticos, particular.</p>
@@ -200,7 +177,7 @@ festas, aeroportos, portos, pontos turísticos, particular.</p>
 - Hotéis
 <br>
 <p>Tudo exclusivamente para melhor atendê-los.</p>
-</p>
+</p></fieldset>
 </div>
 			</section>
 			<svg id="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
@@ -209,17 +186,13 @@ festas, aeroportos, portos, pontos turísticos, particular.</p>
 <svg id="bigHalfCircle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
 				<path d="M0 100 C40 0 60 0 100 100 Z"></path>
 			</svg>
-<section id="carro" class="color4">
+<section id="carro" class="col-1 color2 ss-style-curvedown">
 				<div class="column">
-<center><svg width="450" height="300" viewBox="0 0 450 300">
-    <filter>
-        <feMorphology></feMorphology>
-    </filter>
-    <image xlink:href="img/carro.png" width="90%" height="90%" x="1" y="1"></image>
-</svg></center>
-					<p><h1>Equipado com: </h1>
-<br>
--GPS
+					<p><fieldset><legend><h1>Equipado com: </h1></legend>
+					<center>
+<img src="img/carro.png" style="width: 100%; height:100%;">
+</center>
+<div style="color: #fff;">
 <br>
 -Freios ABS
 <br>
@@ -231,8 +204,7 @@ festas, aeroportos, portos, pontos turísticos, particular.</p>
 <br>
 <h2>INFORMAÇÕES ADICIONAIS:</h2>
 <br>
--Água mineral, barras de cereais, balas e jornal atualizado grátis no interior do veiculo.</p>
-				</div>
+-Água mineral, barras de cereais, balas e jornal atualizado grátis no interior do veiculo.</div></p></fieldset></div>
 			</section>			
 </body>
 <body id="2" class="2">
@@ -268,5 +240,5 @@ festas, aeroportos, portos, pontos turísticos, particular.</p>
 				<p>Desenvolvido por:<a href="#">DarthDesign</a></p>
 			</section>
 		</div><!-- /container -->
-	</body2>
+	</body>
 </html>
