--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@ header {
 	font-family: 'Great Vibes', cursive;
 	font: 'Great Vibes', cursive;
 		}	
+@media only screen and (max-width: 479px){
+.container > header h1 {
+    font-size: 1.5em;
+    line-height: 1.3;
+    margin: 0;
+    font-weight: 300;
+}
+}
+@media only screen and (max-width: 279px){
+.container > header h1 {
+    font-size: 1em;
+    line-height: 1;
+    margin: 0;
+    font-weight: 100;
+}
+}
 	</style>
 	<div class="fixar">
 <div id='cssmenu'>
@@ -52,7 +68,7 @@ header {
 	<br>
 		<div class="container">
 			<!-- Top Navigation -->
-			<header class="header">
+			<header class="header">				
 				<h1 class="texto" >C R M<span>Transporte Executivo</span></h1>	
 			</header>
 			<svg id="curveUpColor2" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
@@ -124,13 +140,13 @@ Honestidade, responsabilidade, seriedade, pontualidade e segurança.</p>
 			<svg id="curveUpColor2" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
 				<path d="M0 100 C 20 0 50 0 100 100 Z"></path>
 			</svg>
-			<section id="servico" class="color3">
+			<section id="servico" class="col-1 color3 ss-style-curvedown">
 			<div class="column">
 				<fieldset><legend><h2>Serviços </h2></legend>
 				<center><svg width="450" height="300" viewBox="0 0 450 300">
     <image xlink:href="img/SERVICE.png" width="90%" height="90%" x="1" y="1" ></image>
 </svg></center>
-				<p>Transporte para empresas, dia da noiva, casamento, aniversário, 
+<p>Transporte para empresas, dia da noiva, casamento, aniversário, 
 festas, aeroportos, portos, pontos turísticos, particular.</p>
 <p>- Receptivo nos Aeroportos de Congonhas, Guarulhos e Viracopos, 24 horas por dia. <br>
 
@@ -182,7 +198,7 @@ festas, aeroportos, portos, pontos turísticos, particular.</p>
 <br>
 <h2>INFORMAÇÕES ADICIONAIS:</h2>
 <br>
--Água mineral, barras de cereais, balas e jornal atualizado grátis no interior do veiculo.</div></p></fieldset></div>
+-Água Mineral, Balas, Barra de Cereais, Chocolate Prestígio, Baton, Chiclete Trident...<br><header><h1>Grátis no interior do veiculo.</h1></header></div></p></fieldset></div>
 			</section>			
 </body>
 <body id="2" class="2">
@@ -212,7 +228,7 @@ festas, aeroportos, portos, pontos turísticos, particular.</p>
 			</svg>
 			<section id="contato" class="related">
 				<p>Toda conquista começa na decisão de tentar.</p>
-				<p><a href="https://wa.me/01511998028371?text=Gostaria%20de%20Solicitar%20uma%20viagem">Solicite Aqui</a></p>
+				<p><a href="https://wa.me/5511998028371?text=Gostaria%20de%20Solicitar%20uma%20viagem">Solicite Aqui</a></p>
 				<p><a href="tel:+5511998028371"><span>Ligue para Nós</span></a></p>
 				<p><a href="mailto:claudiareginamaximiano40@gmail.com?subject=Solicita%C3%A7%C3%A3o%20de%20Or%C3%A7amento&amp;body=Acessei%20o%20seu%20site%20e%20gostaria%20de%20receber%20um%20or%C3%A7amento,%20entre%20em%20contato%20comigo%20por%20este%20email"><span>Envie um Email</span></a></p>
 				<p>Desenvolvido por:<a href="#">DarthDesign</a></p>
