--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@ Honestidade, responsabilidade, seriedade, pontualidade e segurança.</p>
 			<svg id="curveUpColor2" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
 				<path d="M0 100 C 20 0 50 0 100 100 Z"></path>
 			</svg>
-			<section id="servico" class="col-1 color3 ss-style-curvedown">
-			<div class="column">
-				<fieldset><legend><h2>Serviços </h2></legend>
-				<center><svg width="450" height="300" viewBox="0 0 450 300">
-    <image xlink:href="img/SERVICE.png" width="90%" height="90%" x="1" y="1" ></image>
-</svg></center>
-<p>Transporte para empresas, dia da noiva, casamento, aniversário, 
+<section id="servico" class="col-2">
+										<div class="column">
+    <img src="img/SERVICE.png" style="width:90%; height:90%;"></image>
+				</div>
+				<div class="column text">
+					<fieldset><legend><h2>Serviços</h2></legend>
+					<p>Transporte para empresas, dia da noiva, casamento, aniversário, 
 festas, aeroportos, portos, pontos turísticos, particular.</p>
 <p>- Receptivo nos Aeroportos de Congonhas, Guarulhos e Viracopos, 24 horas por dia. <br>
 
@@ -171,8 +171,8 @@ festas, aeroportos, portos, pontos turísticos, particular.</p>
 - Hotéis
 <br>
 <p>Tudo exclusivamente para melhor atendê-los.</p>
-</p></fieldset>
-</div>
+</p>
+				</fieldset></div>
 			</section>
 			<svg id="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
 				<path d="M0 0 C 50 100 80 100 100 0 Z"></path>
